--- a/vistools/lib/cesium/package.json
+++ b/vistools/lib/cesium/package.json
@@ -39,7 +39,7 @@
     "compressible": "^2.0.9",
     "compression": "^1.6.2",
     "electron": "^1.4.10",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "express": "^4.14.0",
     "globby": "^6.1.0",
     "glsl-strip-comments": "^1.0.0",
