added search ranking

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,3 +23,12 @@ python:
   version: 3.7
   install:
     - requirements: docs/requirements.txt
+
+# Optionally rank topics in search results, between -10 (lower) and 10 (higher).
+# 0 is normal rank, not no rank
+
+search:
+  ranking:
+    intro.html: 3
+    install.html: 3
+    vis_tools.*: 2
