fixed some issues in the make files and added install instructions for vis-tools to fix auto API docs

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,6 +23,8 @@ python:
   version: 3.7
   install:
     - requirements: docs/requirements.txt
+    - method: setup
+      path: . 
 
 # Optionally rank topics in search results, between -10 (lower) and 10 (higher).
 # 0 is normal rank, not no rank
