--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,13 @@
-sphinx-rtd-theme~=0.4.3
-sphinxcontrib-napoleon~=0.7
-sphinx~=2.4.4
-plantweb~=1.2.1
-numpydoc~=1.0.0
+numpydoc~=1.5.0
 jinja2<3.1
+sphinx~=6.2.1
+sphinx-rtd-theme~=1.2.2
+sphinxcontrib-napoleon~=0.7
+plantweb~=1.2.1
+sphinxcontrib-programoutput~=0.17
+nbsphinx~=0.9.2
+jupyterlab~=4.0.2
+myst-parser~=2.0.0
+readthedocs-sphinx-search~=0.3.1
+sphinx-copybutton~=0.5.2
+pygithub~=1.57
